trunk/Archive2/e9/0dbab044bc9dc8/output
main.cpp: In function 'int main()':
main.cpp:8:16: error: storage size of 'array' isn't known
     char array[];
                ^
